@@ -1,24 +1,23 @@
 package hk.edu.polyu.comp.vlabcontroller.auth.impl;
 
 import hk.edu.polyu.comp.vlabcontroller.auth.IAuthenticationBackend;
+import hk.edu.polyu.comp.vlabcontroller.config.ProxyProperties;
+import hk.edu.polyu.comp.vlabcontroller.config.ServerProperties;
 import hk.edu.polyu.comp.vlabcontroller.security.FixedDefaultOAuth2AuthorizationRequestResolver;
 import hk.edu.polyu.comp.vlabcontroller.util.SessionHelper;
+import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 import net.minidev.json.JSONArray;
 import net.minidev.json.parser.JSONParser;
 import net.minidev.json.parser.ParseException;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.springframework.core.env.Environment;
+import org.springframework.cloud.context.config.annotation.RefreshScope;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.ExpressionUrlAuthorizationConfigurer.AuthorizedUrl;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.authority.mapping.GrantedAuthoritiesMapper;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
 import org.springframework.security.oauth2.client.oidc.userinfo.OidcUserRequest;
 import org.springframework.security.oauth2.client.oidc.userinfo.OidcUserService;
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
@@ -36,19 +35,17 @@ import org.springframework.security.oauth2.core.oidc.OidcUserInfo;
 import org.springframework.security.oauth2.core.oidc.user.DefaultOidcUser;
 import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.security.oauth2.core.oidc.user.OidcUserAuthority;
-import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import javax.inject.Inject;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@Slf4j
+@RefreshScope
 public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
 
     public static final String NAME = "openid";
@@ -56,12 +53,13 @@ public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
     private static final String REG_ID = "vlab";
     private static final String ENV_TOKEN_NAME = "VLAB_OIDC_ACCESS_TOKEN";
 
-    private final Logger log = LogManager.getLogger(OpenIDAuthenticationBackend.class);
-
     private OAuth2AuthorizedClientRepository oAuth2AuthorizedClientRepository;
 
-    @Inject
-    private Environment environment;
+    @Setter(onMethod_ = {@Inject})
+    private ProxyProperties proxyProperties;
+
+    @Setter(onMethod_ = {@Inject})
+    private ServerProperties serverProperties;
 
     @Override
     public String getName() {
@@ -75,32 +73,26 @@ public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
 
     @Override
     public void configureHttpSecurity(HttpSecurity http, AuthorizedUrl anyRequestConfigurer) throws Exception {
-        ClientRegistrationRepository clientRegistrationRepo = createClientRepo();
+        var clientRegistrationRepo = createClientRepo();
         oAuth2AuthorizedClientRepository = new HttpSessionOAuth2AuthorizedClientRepository();
 
         anyRequestConfigurer.authenticated();
 
         http
-                .oauth2Login()
-                .loginPage("/login")
-                .clientRegistrationRepository(clientRegistrationRepo)
-                .authorizedClientRepository(oAuth2AuthorizedClientRepository)
-                .authorizationEndpoint()
-                .authorizationRequestResolver(new FixedDefaultOAuth2AuthorizationRequestResolver(clientRegistrationRepo, OAuth2AuthorizationRequestRedirectFilter.DEFAULT_AUTHORIZATION_REQUEST_BASE_URI))
-                .and()
-                .failureHandler(new AuthenticationFailureHandler() {
-
-                    @Override
-                    public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response,
-                                                        AuthenticationException exception) throws IOException, ServletException {
-                        log.error(exception);
-                        response.sendRedirect(ServletUriComponentsBuilder.fromCurrentContextPath().path("/auth-error").build().toUriString());
-                    }
-
-                })
-                .userInfoEndpoint()
-                .userAuthoritiesMapper(createAuthoritiesMapper())
-                .oidcUserService(createOidcUserService());
+            .oauth2Login()
+            .loginPage("/login")
+            .clientRegistrationRepository(clientRegistrationRepo)
+            .authorizedClientRepository(oAuth2AuthorizedClientRepository)
+            .authorizationEndpoint()
+            .authorizationRequestResolver(new FixedDefaultOAuth2AuthorizationRequestResolver(clientRegistrationRepo, OAuth2AuthorizationRequestRedirectFilter.DEFAULT_AUTHORIZATION_REQUEST_BASE_URI))
+            .and()
+            .failureHandler((request, response, exception) -> {
+                log.error("an error occured: {}", exception);
+                response.sendRedirect(ServletUriComponentsBuilder.fromCurrentContextPath().path("/auth-error").build().toUriString());
+            })
+            .userInfoEndpoint()
+            .userAuthoritiesMapper(createAuthoritiesMapper())
+            .oidcUserService(createOidcUserService());
     }
 
     @Override
@@ -109,117 +101,98 @@ public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
     }
 
     public String getLoginRedirectURI() {
-        return SessionHelper.getContextPath(environment, false)
-                + OAuth2AuthorizationRequestRedirectFilter.DEFAULT_AUTHORIZATION_REQUEST_BASE_URI
-                + "/" + REG_ID;
+        return SessionHelper.getContextPath(serverProperties, false)
+            + OAuth2AuthorizationRequestRedirectFilter.DEFAULT_AUTHORIZATION_REQUEST_BASE_URI
+            + "/" + REG_ID;
     }
 
     @Override
     public String getLogoutSuccessURL() {
-        String logoutURL = environment.getProperty("proxy.openid.logout-url");
-        if (logoutURL == null || logoutURL.trim().isEmpty())
+        var logoutURL = proxyProperties.getOpenID().getLogoutUrl();
+        if (logoutURL == null || logoutURL.isBlank())
             logoutURL = IAuthenticationBackend.super.getLogoutSuccessURL();
         return logoutURL;
     }
 
     @Override
-    public void customizeContainerEnv(List<String> env) {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+    public void customizeContainerEnv(Map<String, String> env) {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
         if (auth == null) return;
 
-        OidcUser user = (OidcUser) auth.getPrincipal();
-        HttpServletRequest request = ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).getRequest();
-        OAuth2AuthorizedClient client = oAuth2AuthorizedClientRepository.loadAuthorizedClient(REG_ID, auth, request);
+        var user = (OidcUser) auth.getPrincipal();
+        var request = ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).getRequest();
+        var client = oAuth2AuthorizedClientRepository.loadAuthorizedClient(REG_ID, auth, request);
         if (client == null || client.getAccessToken() == null) return;
 
-        env.add(ENV_TOKEN_NAME + "=" + client.getAccessToken().getTokenValue());
+        env.put(ENV_TOKEN_NAME, client.getAccessToken().getTokenValue());
     }
 
     protected ClientRegistrationRepository createClientRepo() {
-        Set<String> scopes = new HashSet<>();
-        scopes.add("openid");
-        scopes.add("email");
-
-        for (int i = 0; ; i++) {
-            String scope = environment.getProperty(String.format("proxy.openid.scopes[%d]", i));
-            if (scope == null) break;
-            else scopes.add(scope);
-        }
-
-        ClientRegistration client = ClientRegistration.withRegistrationId(REG_ID)
+        var openID = proxyProperties.getOpenID();
+        return new InMemoryClientRegistrationRepository(
+            ClientRegistration.withRegistrationId(REG_ID)
                 .authorizationGrantType(AuthorizationGrantType.AUTHORIZATION_CODE)
                 .clientName(REG_ID)
-                .redirectUriTemplate("{baseUrl}/login/oauth2/code/{registrationId}")
-                .scope(scopes.toArray(new String[scopes.size()]))
-                .userNameAttributeName(environment.getProperty("proxy.openid.username-attribute", "email"))
-                .authorizationUri(environment.getProperty("proxy.openid.auth-url"))
-                .tokenUri(environment.getProperty("proxy.openid.token-url"))
-                .jwkSetUri(environment.getProperty("proxy.openid.jwks-url"))
-                .clientId(environment.getProperty("proxy.openid.client-id"))
-                .clientSecret(environment.getProperty("proxy.openid.client-secret"))
-                .build();
-
-        return new InMemoryClientRegistrationRepository(Collections.singletonList(client));
+                .redirectUri("{baseUrl}/login/oauth2/code/{registrationId}")
+                .scope(Stream.concat(Stream.of("openid", "email"), openID.getScopes().stream()).collect(Collectors.toSet()))
+                .userNameAttributeName(openID.getUsernameAttribute())
+                .authorizationUri(openID.getAuthUrl())
+                .tokenUri(openID.getTokenUrl())
+                .jwkSetUri(openID.getJwksUrl())
+                .clientId(openID.getClientId())
+                .clientSecret(openID.getClientSecret())
+                .build()
+        );
     }
 
     protected GrantedAuthoritiesMapper createAuthoritiesMapper() {
-        String rolesClaimName = environment.getProperty("proxy.openid.roles-claim");
-        if (rolesClaimName == null || rolesClaimName.isEmpty()) {
-            return authorities -> authorities;
-        } else {
-            return authorities -> {
-                Set<GrantedAuthority> mappedAuthorities = new HashSet<>();
-                for (GrantedAuthority auth : authorities) {
-                    if (auth instanceof OidcUserAuthority) {
-                        OidcIdToken idToken = ((OidcUserAuthority) auth).getIdToken();
+        var rolesClaimName = proxyProperties.getOpenID().getRolesClaim();
+        if (rolesClaimName != null && !rolesClaimName.isEmpty()) {
+            return authorities -> authorities.stream()
+                .filter(OidcUserAuthority.class::isInstance)
+                .map(OidcUserAuthority.class::cast)
+                .map(OidcUserAuthority::getIdToken)
+                .flatMap(idToken -> {
+                    var claims = idToken.getClaims();
+                    if (log.isDebugEnabled()) {
+                        var lineSep = System.getProperty("line.separator");
+                        var claims_ = claims.entrySet().stream()
+                            .map(e -> String.format("%s -> %s", e.getKey(), e.getValue()))
+                            .collect(Collectors.joining(lineSep));
+                        log.debug(String.format("Checking for roles in claim '%s'. Available claims in ID token (%d):%s%s",
+                            rolesClaimName, claims.size(), lineSep, claims_));
+                    }
 
-                        if (log.isDebugEnabled()) {
-                            String lineSep = System.getProperty("line.separator");
-                            String claims = idToken.getClaims().entrySet().stream()
-                                    .map(e -> String.format("%s -> %s", e.getKey(), e.getValue()))
-                                    .collect(Collectors.joining(lineSep));
-                            log.debug(String.format("Checking for roles in claim '%s'. Available claims in ID token (%d):%s%s",
-                                    rolesClaimName, idToken.getClaims().size(), lineSep, claims));
-                        }
+                    var claimValue = claims.get(rolesClaimName);
+                    if (claimValue == null) {
+                        log.debug("No matching claim found.");
+                    } else {
+                        log.debug(String.format("Matching claim found: %s -> %s (%s)", rolesClaimName, claimValue, claimValue.getClass()));
+                    }
 
-                        Object claimValue = idToken.getClaims().get(rolesClaimName);
-                        if (claimValue == null) {
-                            log.debug("No matching claim found.");
-                        } else {
-                            log.debug(String.format("Matching claim found: %s -> %s (%s)", rolesClaimName, claimValue, claimValue.getClass()));
-                        }
-
-                        // Workaround: in some cases, getClaimAsStringList fails to parse??
-                        List<String> roles = idToken.getClaimAsStringList(rolesClaimName);
-                        if (roles == null && claimValue instanceof String) {
-                            List<String> parsedRoles = new ArrayList<>();
+                    // Workaround: in some cases, getClaimAsStringList fails to parse??
+                    return Optional.ofNullable(idToken.getClaimAsStringList(rolesClaimName))
+                        .map(Collection::stream)
+                        .orElseGet(() -> {
                             try {
-                                Object value = new JSONParser(JSONParser.MODE_PERMISSIVE).parse((String) claimValue);
+                                var value = new JSONParser(JSONParser.MODE_PERMISSIVE).parse((String) claimValue);
                                 if (value instanceof List) {
-                                    List<?> valueList = (List<?>) value;
-                                    valueList.forEach(o -> parsedRoles.add(o.toString()));
+                                    return ((List<?>) value).stream().map(Object::toString);
                                 }
                             } catch (ParseException e) {
                                 // Unable to parse JSON
                             }
-                            roles = parsedRoles;
-                        }
-                        if (roles == null) {
                             if (log.isDebugEnabled())
                                 log.debug("Failed to parse claim value as an array: " + claimValue);
-                            continue;
-                        }
-
-                        for (String role : roles) {
-                            String mappedRole = role.toUpperCase().startsWith("ROLE_") ? role : "ROLE_" + role;
-                            mappedAuthorities.add(new SimpleGrantedAuthority(mappedRole.toUpperCase()));
-                        }
-                        if (log.isDebugEnabled()) log.debug("The following roles were successfully parsed: " + roles);
-                    }
-                }
-                return mappedAuthorities;
-            };
+                            return Stream.empty();
+                        })
+                        .map(role -> role.toUpperCase().startsWith("ROLE_") ? role : "ROLE_" + role)
+                        .map(String::toUpperCase)
+                        .map(SimpleGrantedAuthority::new);
+                })
+                .collect(Collectors.toSet());
         }
+        return authorities -> authorities;
     }
 
     protected OidcUserService createOidcUserService() {
@@ -233,7 +206,7 @@ public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
                 } catch (IllegalArgumentException ex) {
                     throw new OAuth2AuthenticationException(new OAuth2Error(OAuth2ErrorCodes.INVALID_REQUEST), "Error while loading user info", ex);
                 }
-                String nameAttributeKey = environment.getProperty("proxy.openid.username-attribute", "email");
+                var nameAttributeKey = proxyProperties.getOpenID().getUsernameAttribute();
                 return new CustomNameOidcUser(new HashSet<>(user.getAuthorities()), user.getIdToken(), user.getUserInfo(), nameAttributeKey);
             }
         };
@@ -254,7 +227,7 @@ public class OpenIDAuthenticationBackend implements IAuthenticationBackend {
         @Override
         public String getName() {
             if (isEmailsAttribute) {
-                Object emails = getAttributes().get(ID_ATTR_EMAILS);
+                var emails = getAttributes().get(ID_ATTR_EMAILS);
                 if (emails instanceof String[]) return ((String[]) emails)[0];
                 else if (emails instanceof JSONArray) return ((JSONArray) emails).get(0).toString();
                 else return emails.toString();
